ingress-nginx-w-certificate/manifests/backends-test-ingress-2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a
  namespace: test-ingress-2
spec:
  replicas: 1
  selector:
    matchLabels: {app: web-a}
  template:
    metadata:
      labels: {app: web-a}
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 443
          volumeMounts:
            - name: nginx-template
              mountPath: /etc/nginx/templates
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
      volumes:
        - name: nginx-template
          configMap: {name: nginx-template}
        - name: tls
          secret: {secretName: example-tls}
---
apiVersion: v1
kind: Service
metadata:
  name: web-a
  namespace: test-ingress-2
spec:
  selector: {app: web-a}
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-b
  namespace: test-ingress-2
spec:
  replicas: 1
  selector:
    matchLabels: {app: web-b}
  template:
    metadata:
      labels: {app: web-b}
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 443
          volumeMounts:
            - name: nginx-template
              mountPath: /etc/nginx/templates
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
      volumes:
        - name: nginx-template
          configMap: {name: nginx-template}
        - name: tls
          secret: {secretName: example-tls}
---
apiVersion: v1
kind: Service
metadata:
  name: web-b
  namespace: test-ingress-2
spec:
  selector: {app: web-b}
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-c
  namespace: test-ingress-2
spec:
  replicas: 1
  selector:
    matchLabels: {app: web-c}
  template:
    metadata:
      labels: {app: web-c}
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 443
          volumeMounts:
            - name: nginx-template
              mountPath: /etc/nginx/templates
            - name: tls
              mountPath: /etc/nginx/tls
              readOnly: true
      volumes:
        - name: nginx-template
          configMap: {name: nginx-template}
        - name: tls
          secret: {secretName: example-tls}
---
apiVersion: v1
kind: Service
metadata:
  name: web-c
  namespace: test-ingress-2
spec:
  selector: {app: web-c}
  ports:
    - port: 443
      targetPort: 443
